--- a/ausfallplan/empty_table.html
+++ b/ausfallplan/empty_table.html
@@ -14,32 +14,25 @@
 		</thead>
 		<tbody class="row-hover">
 			<tr class="row-2 even">
-				<td class="column-1">Mo, 06.02.2023</td>
-				<td class="column-2">6. Stunde</td>
-				<td class="column-3">JüL 3, JüL 7</td>
-				<td class="column-4">Englisch</td>
+				<td class="column-1"></td>
+				<td class="column-2"></td>
+				<td class="column-3"></td>
+				<td class="column-4"></td>
 			</tr>
 			<tr class="row-3 odd">
 				<td class="column-1"></td>
-				<td class="column-2">7./ 8. Stunde</td>
-				<td class="column-3">Geige</td>
+				<td class="column-2"></td>
+				<td class="column-3"></td>
 				<td class="column-4"></td>
 			</tr>
 			<tr class="row-4 even">
-				<td class="column-1">Di, 07.02.2023</td>
-				<td class="column-2">7. Stunde</td>
-				<td class="column-3">6 a, b, c</td>
-				<td class="column-4">Saxophon</td>
-			</tr>
-			<tr class="row-5 odd">
 				<td class="column-1"></td>
-				<td class="column-2">7. Stunde</td>
-				<td class="column-3">4a, b</td>
-				<td class="column-4">Querflöte</td>
+				<td class="column-2"></td>
+				<td class="column-3"></td>
+				<td class="column-4"></td>
 			</tr>
 		</tbody>
 	</table>
-
 </body>
 
 </html>
