Fix invalid html

--- a/ausfallplan.html
+++ b/ausfallplan.html
@@ -150,10 +150,6 @@
 			}
 		}
 
-		#nectar_fullscreen_rows {
-			background-color: ;
-		}
-
 		body {
 			background-position: 0 0;
 			background-repeat: repeat;
@@ -361,7 +357,7 @@
 									style="padding-top: 0px; padding-bottom: 0px; ">
 									<div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false">
 										<div class="inner-wrap">
-											<div class="row-bg" style=""></div>
+											<div class="row-bg"></div>
 										</div>
 										<div class="row-bg-overlay"></div>
 									</div>
@@ -413,7 +409,7 @@
 									class="wpb_row vc_row-fluid vc_row standard_section " style="padding-top: 0px; padding-bottom: 0px; ">
 									<div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false">
 										<div class="inner-wrap">
-											<div class="row-bg" style=""></div>
+											<div class="row-bg"></div>
 										</div>
 										<div class="row-bg-overlay"></div>
 									</div>
